修复向量背压误判并保全摄取重试